SS-6 Added the message to the sign-up page

--- a/src/APP/Pages/SignupPage/style.css
+++ b/src/APP/Pages/SignupPage/style.css
@@ -21,6 +21,10 @@
   
 }
 
+.signup-form-link {
+  color:white;
+  font-weight: 800;
+}
 
 .signup-form label {
   margin-bottom: 10px;
@@ -50,6 +54,8 @@
   background-color: #ffba00;
   color: #fff;
   cursor: pointer;
+  font-weight: 900;
+  transition-duration: 0.2s;
 }
 
 
