SS-6 finished sign up

--- a/src/APP/Pages/SignupPage/style.css
+++ b/src/APP/Pages/SignupPage/style.css
@@ -30,6 +30,9 @@
   margin-bottom: 10px;
 }
 
+.signup-form p {
+  margin-bottom: 2rem;
+}
 
 .signup-form input[type="text"],
 .signup-form input[type="email"],
