--- a/src/APP/Pages/HomePage/FooterSection/style.css
+++ b/src/APP/Pages/HomePage/FooterSection/style.css
@@ -5,7 +5,7 @@
     align-items: flex-start;
     background-color: #0C3A2D;
     padding: 30px; /* Increased padding */
-    color: #FFFFFF;
+    color: #000000;
     position: relative;
   }
   
