--- a/src/APP/Pages/ProfilePage/ProductSection/style.css
+++ b/src/APP/Pages/ProfilePage/ProductSection/style.css
@@ -4,9 +4,10 @@
   border-radius: 40px;
   background-color: #ffffff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  /* background-color: red; */
 }
 
-.header-section {
+/* .header-section {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -14,9 +15,9 @@
   background-color: #0C3A2D;
   border-radius: 20px;
   padding: 20px;
-}
+} */
 
-.left-section {
+/* .left-section {
   flex: 1;
 }
 
@@ -59,7 +60,7 @@
   background-color: gray;
   border-radius: 10px;
   margin-bottom: 5px;
-}
+} */
 
 .products-section {
   padding-top: 40px;
