--- a/src/APP/Pages/ProfilePage/ProductSection/style.css
+++ b/src/APP/Pages/ProfilePage/ProductSection/style.css
@@ -1,65 +1,11 @@
-.main-card {
+.products-main-card {
     margin: 20px;
     padding: 20px;
     border-radius: 40px;
     background-color: #ffffff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
-  .header-section {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    background-color: #0C3A2D;
-    border-radius: 20px;
-    padding: 20px;
-  }
-  
-  .left-section {
-    flex: 1;
-  }
-  
-  .heading {
-    color: white;
-  }
-  
-  .right-section {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .nav-link {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .username-section {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: -20px;
-    color: white;
-    background-color: #0C3A2D;
-    padding: 20px;
-  }
-  
-  .logo {
-    width: 50px;
-    height: 50px;
-    background-color: gray;
-    border-radius: 10px;
-    margin-bottom: 5px;
-  }
+
   
   .products-section {
     padding-top: 40px;
@@ -72,16 +18,20 @@
   
   .products-container {
     display: flex;
-    justify-content: space-between;
+    /* display: grid; */
+    justify-content: left;
+    flex-wrap: wrap;
     gap: 40px;
     padding-top: 40px;
+    background-color: #F5F5F5;
   }
   
   .product-card {
     text-align: center;
     background-color: #FFC805;
     border-radius: 5px;
-
+    height: 15rem;
+    width: 15rem;
   }
   
   .product-card img {
